# ControlPostSim

./: CMakeLists.txt  README.md  example.xml  model.h  model_driver.c  model_parser.c  xml_parser.c
model_input/: WMS-config.xml  WMS-income.txt  WMS-map.csv  WMS-robots.xml  WMS-targets.txt  map_configv2.txt  model_config.txt  package_config (copy).txt  robot_config.txt  skladConfig.xml
post-sim/: CMakeLists.txt  README.md  model.h  model_main.c  model_map.c  model_parser.c  xml_parser.c
